atualização de estilização de inputs e aba relatorios

--- a/src/components/screens/Login.module.css
+++ b/src/components/screens/Login.module.css
@@ -6,6 +6,8 @@
     border: 1px solid #1a4f77;
     border-radius: 5%;
     padding: 3%;
+    /* display: flex; */
+    /* justify-content: center; */
 }
 
 .container_second {
@@ -22,6 +24,7 @@
 
 .campos{
     display: flex;
+    justify-content: center;
     gap: 5%;
     margin-bottom: 1.5em;
 }
@@ -59,8 +62,7 @@ button:hover{
     /* transform: scale(1.0); */
 }
 
-input[type="text"],
-input[type="password"] {
+.input{
     width: 70%;
     border: 2px solid #ccc;
     border-radius: 5px;
@@ -70,8 +72,7 @@ input[type="password"] {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); 
 }
 
-input[type="text"]:focus,
-input[type="password"]:focus {
+.input:focus {
     border-color: #1a4f77;
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.5);
 }
