--- a/src/components/screens/Relatorio.module.css
+++ b/src/components/screens/Relatorio.module.css
@@ -1,5 +1,6 @@
 .container{
     display: flex;
+    /* height: 100vh; */
     /* border: 2px solid black; */
 }
 
@@ -11,6 +12,17 @@
     border-radius: 10px;
     height: 100%;
     width: 950px;
+}
+
+.flex{
+    display: flex;
+    margin: 5px;
+    /* padding: 5px; */
+}
+
+.flex button {
+    /* padding: 5px; */
+    margin: 5px 5px 0 5px;
 }
 
 .boxes{
