--- a/src/components/screens/Abastecimento.module.css
+++ b/src/components/screens/Abastecimento.module.css
@@ -19,7 +19,6 @@
     flex-direction: column;
     padding: 50px 100px;
     user-select: none;
-    /* border: 2px solid #1a4f77; */
 }
 
 select{
@@ -27,16 +26,25 @@ select{
     margin-top: 3%;
 }
 
-input[type="number"] {
-    width: 200px;
-    margin-top: 3%;
+.inputQtd {
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    padding: 5px;
+    transition: all 0.3s ease-in-out;
+    margin-top: 6px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
+
+.inputQtd:focus {
+    color: #1a4f77;
+    border-color: #1a4f77;
+    box-shadow: 0 0 8px rgba(0, 123, 255, 0.5);
+}
+
 
 .botao{
-    margin-top: 5%;
+    margin-top: 10px;
+    width: 200px;
     user-select: none;
-}
-
-.flex{
-    display: flex;
 }
