--- a/src/components/screens/Relatorio.module.css
+++ b/src/components/screens/Relatorio.module.css
@@ -1,35 +1,35 @@
-.container{
+.container {
     display: flex;
-    /* height: 100vh; */
-    /* border: 2px solid black; */
+    height: 100vh; /* Ocupa 100% da altura da tela */
 }
 
-.container_second{
-    margin: 0 auto;
-    margin-top: 10em;
-    padding: 2%;
-    border: 2px solid #1a4f77;
-    border-radius: 10px;
-    height: 100%;
-    width: 950px;
+.container_second {
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    padding: 40px 30px;
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+    transition: all 0.3s ease-in-out;
 }
 
 .flex{
     display: flex;
-    margin: 5px;
-    /* padding: 5px; */
 }
 
 .flex button {
-    /* padding: 5px; */
     margin: 5px 5px 0 5px;
 }
 
 .boxes{
-    margin: 1%;
+    margin: 5px;
+    width: 260px;
+    /* display: flex; */
+    justify-content: space-around;
 }
 
-section main section{
+.center{
     display: flex;
     margin-top: 2%;
 }
@@ -38,11 +38,14 @@ h4{
     background-color: #1a4f77;
     color: #fff;
     padding: 1%;
-    width: 41.5%;
+    width: 370px;
     border-radius: 10px;
 }
 
-select {
+
+.inputs{
+    width: 100%;
+    margin-top: 5px;
     padding: 5px;
     border: 2px solid #ccc;
     border-radius: 8px;
@@ -54,22 +57,26 @@ select {
 }
 
 /* Quando o select está em foco */
-select:focus {
+.inputs:focus {
     border-color: #007bff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
 /* Quando passa o mouse */
-select:hover {
+.inputs:hover {
     border-color: #0056b3;
 }
 
 /* Personalizando a seta */
-select::-ms-expand {
+.inputs::-ms-expand {
     display: none;
 }
 
 select {
+    margin:0;
+}
+
+/* .inputs {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -77,4 +84,4 @@ select {
     background-repeat: no-repeat;
     background-position: right 10px center;
     background-size: 12px;
-}
+} */
