--- a/src/components/screens/Login.module.css
+++ b/src/components/screens/Login.module.css
@@ -3,11 +3,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 1px solid #1a4f77;
-    border-radius: 5%;
-    padding: 3%;
-    /* display: flex; */
-    /* justify-content: center; */
+    padding: 50px;
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+    transition: all 0.3s ease-in-out;
 }
 
 .container_second {
